# WolfEngine

./: .clang-format  .gitmodules  CMakeLists.txt  imgui.ini  main.cpp  readme.md
Sandbox/: BatchRendererTest.cpp  BatchRendererTest.h  CMakeLists.txt  OpenGLLayer.cpp
Wolf/: CMakeLists.txt  WEngine.h  main.cpp
Wolf/Platform/: CMakeLists.txt
Wolf/Platform/Opengl/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLRenderCommand.cpp  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  OpenGLContext.cpp  OpenGLContext.h
Wolf/Sandbox/: BatchRendererTest.cpp  BatchRendererTest.h  CMakeLists.txt  OpenGLLayer.cpp  OpenGLLayer.h
Wolf/Wolf/: CMakeLists.txt  WEngine.h  entry_point.h
Wolf/Wolf/animation/: SpriteAnimation.h
Wolf/Wolf/assets/: assets.cpp  assets.h
Wolf/Wolf/assets/shaders/: renderer2d.frag  renderer2d.vert
Wolf/Wolf/assets/shaders/default_circle/: circle.frag  circle.vert
Wolf/Wolf/assets/shaders/default_sprite/: renderer2d.frag  renderer2d.vert
Wolf/Wolf/assets/shaders/texture/: renderer2d.frag  renderer2d.vert
Wolf/Wolf/core/: Application.cpp  Application.h  Event.h  GraphicsContext.h  Layer.h  Time.cpp  Time.h  Window.cpp  Window.h  codes.h  wolf_types.h
Wolf/Wolf/engine_assets/shaders/default_circle/: circle.frag
Wolf/Wolf/engine_assets/shaders/default_sprite/: renderer2d.vert
Wolf/Wolf/imgui_layer/: imgui_layer.cpp  imgui_layer.h
Wolf/Wolf/input/: Cursor.cpp  Cursor.h  input.cpp  input.h  input_transform.cpp  input_transform.h
Wolf/Wolf/numerical/: Bounds.h  Random.cpp  Random.h  numerical.h
Wolf/Wolf/rendering/: BitMap.h  Buffer.h  Camera.cpp  Camera.h  Material.cpp  Material.h  MaterialAttribute.h  RenderCommand.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h  VertexArray.h
Wolf/Wolf/rendering/batch/: Batch.h  CircleBatch.cpp  CircleBatch.h  LineBatch.cpp  LineBatch.h  SpriteBatch.cpp  SpriteBatch.h
Wolf/Wolf/utils/: File.cpp  File.h  FilePath.cpp  FilePath.h  PathManager.cpp  PathManager.h
Wolf/engine_assets/shaders/default_circle/: circle.vert
Wolf/engine_assets/shaders/default_line/: line.frag  line.vert
Wolf/engine_assets/shaders/default_sprite/: renderer2d.frag
Wolf/tests/: CMakeLists.txt  batch_renderer_test.cpp  batch_renderer_test.hpp  performance_display.hpp  test.cpp  texture_test.hpp
Wolf/tests/assets/: bitmap_load_test.hpp  bitmap_save_test.hpp  image_write_test.hpp  texture_load_test.hpp
Wolf/tests/character_controller/: character.hpp  character_controller_test.hpp
Wolf/tests/imgui_tests/: imgui_docking.hpp
Wolf/tests/renderer/: batch_renderer_test.hpp  sprite_animation_test.hpp  sprite_rendering_test.hpp  texture_test.hpp
